# anyfile

./: CMakeLists.txt  README.md  data_generation.py
include/: CsvHandler.h  FileDump.h  FileHandler.h  JsonHandler.h
src/: CsvHandler.cpp  FileDump.cpp  JsonHandler.cpp  main.cpp
test_data/: test_data.csv  test_data.json
tests/: CMakeLists.txt  test_csvhandler.cpp  test_jsonhandler.cpp
